syntax = "proto3";

package main;

option go_package = "model-service/proto/model;cardpb";

message Card {
    string id = 1;
    string user_id = 2;
    string status = 3;
    string updated_at = 4;
}

message RequestCardRequest { string user_id = 1; }
message RequestCardResponse { Card card = 1; }

message ActivateCardRequest { string id = 1; }
message ActivateCardResponse { Card card = 1; }

message BlockCardRequest { string id = 1; }
message BlockCardResponse { Card card = 1; }

message UnblockCardRequest { string id = 1; }
message UnblockCardResponse { Card card = 1; }

message CloseCardRequest { string id = 1; }
message CloseCardResponse { Card card = 1; }

message GetCardRequest { string id = 1; }
message GetCardResponse { Card card = 1; }

service CardService {
    rpc RequestCard(RequestCardRequest) returns (RequestCardResponse);
    rpc ActivateCard(ActivateCardRequest) returns (ActivateCardResponse);
    rpc BlockCard(BlockCardRequest) returns (BlockCardResponse);
    rpc UnblockCard(UnblockCardRequest) returns (UnblockCardResponse);
    rpc CloseCard(CloseCardRequest) returns (CloseCardResponse);
    rpc GetCard(GetCardRequest) returns (GetCardResponse);
}
